tigergraph-server/3.9/cluster-and-ha-management/crr-faq.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq)[Next](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
  *     * [Release Notes](https://docs.tigergraph.com/tigergraph-server/3.9/release-notes/)
  *     * [Overview](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [Get Started](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/)
      * Installation
        * [On Docker](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/docker)
        * [On Cloud Marketplace](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/cloud-images/)
          * [AWS](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/cloud-images/aws)
          * [Azure](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/cloud-images/azure)
          * [GCP](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/cloud-images/gcp)
        * [On Linux](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/linux)
          * [System Requirements](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements)
          * [Linux On Bare Metal](https://docs.tigergraph.com/tigergraph-server/3.9/installation/bare-metal-install)
          * [Post Install Checks](https://docs.tigergraph.com/tigergraph-server/3.9/installation/post-install-check)
        * [Advanced License Issues](https://docs.tigergraph.com/tigergraph-server/3.9/installation/license)
        * [Changing Ports](https://docs.tigergraph.com/tigergraph-server/3.9/installation/change-port)
        * [Upgrade](https://docs.tigergraph.com/tigergraph-server/3.9/installation/upgrade)
        * [Uninstallation](https://docs.tigergraph.com/tigergraph-server/3.9/installation/uninstallation)
      * [The GSQL Shell](https://docs.tigergraph.com/tigergraph-server/3.9/gsql-shell/)
        * [GSQL Shell Sessions](https://docs.tigergraph.com/tigergraph-server/3.9/gsql-shell/gsql-sessions)
        * [Using a Remote GSQL Client](https://docs.tigergraph.com/tigergraph-server/3.9/gsql-shell/using-a-remote-gsql-client)
        * [GSQL Shell (Web)](https://docs.tigergraph.com/tigergraph-server/3.9/gsql-shell/web)
    * [Create Database](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/database-definition)
      * [MultiGraph Overview](https://docs.tigergraph.com/tigergraph-server/3.9/intro/multigraph-overview)
  *     * [Load Data](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/)
      * [Overview](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/data-loading-overview)
      * [Load from Local Files](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/load-local-files)
      * [Load from Cloud Storage](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/load-from-cloud)
      * [Load from Data Warehouse](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/load-from-warehouse)
      * [Load from External Kafka](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/load-from-kafka)
      * [Load DataFrames from Spark](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/spark-connection-via-jdbc-driver)
      * [Manage Data Sources](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/manage-data-source)
      * [Stream from External Kafka (Deprecated)](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/data-streaming-connector/kafka)
  *     * Advanced Topics
      * [System Management](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/management-with-gadmin)
        * [Memory management](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/memory-management)
        * [Manage TigerGraph services](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/manage-services)
        * [Workload Management](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/workload-management)
        * [Metrics Reporting](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/system-metrics)
        * [Command Glossary](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/management-commands)
      * [Access Management](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/)
        * Authentication
          * [Enabling User Authentication](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/enabling-user-authentication)
          * [User Credentials](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/user-credentials)
          * [Single Sign-On](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/sso)
          * [Lightweight Directory Access Protocol (LDAP)](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/ldap)
        * Authorization
          * [User Management](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/user-management)
          * [Role Management](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/role-management)
          * [Access Control Model](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/access-control-model)
          * [Access Control Lists (ACLs)](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/acl-management)
          * [Vertex-Level Access Control (Deprecated)](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/vlac)
      * [Backup and Restore](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/)
        * [Backup and Restore Configurations](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/configurations)
        * [Back up a Database Cluster](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/backup-cluster)
        * [Restore a Database Backup from the Same Cluster](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/restore-backup-same)
        * [Restore a Database Backup from Another Cluster](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/cross-cluster-backup)
        * [Database Import/Export](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/database-import-export)
        * [Legacy Backup and Restore](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/gbar-legacy)
      * Cluster and HA Management
        * Cluster Resizing
          * [Cluster Expansion](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/expand-a-cluster)
          * [Cluster Shrinking](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/shrink-a-cluster)
          * [Cluster Repartition](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/repartition-a-cluster)
          * [Cluster Replace](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/how_to-replace-a-node-in-a-cluster)
        * [Cross-Region Replication (CRR)](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-index)
          * [Set up CRR](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/set-up-crr)
          * [Fail over to the DR cluster](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/fail-over)
          * [Troubleshooting CRR](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/troubleshooting)
          * [CRR FAQ](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq)
        * [High Availability (HA)](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/ha-overview)
          * [Cluster Configuration](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/ha-cluster)
          * [GSQL Server Support](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/ha-for-gsql-server)
          * [Application Server Support](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/ha-for-application-server)
          * [Cluster Commands](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/cluster-commands)
          * [Removal of Failed Nodes](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node)
      * [Architecture](https://docs.tigergraph.com/tigergraph-server/3.9/intro/internal-architecture)
        * [MultiGraph Overview](https://docs.tigergraph.com/tigergraph-server/3.9/intro/multigraph-overview)
        * [Transaction Processing and ACID Support](https://docs.tigergraph.com/tigergraph-server/3.9/intro/transaction-and-acid)
        * [Continuous Availability Overview](https://docs.tigergraph.com/tigergraph-server/3.9/intro/continuous-availability-overview)
      * [Kubernetes (Preview)](https://docs.tigergraph.com/tigergraph-server/3.9/kubernetes/)
        * [Kubernetes Operator (Preview)](https://docs.tigergraph.com/tigergraph-server/3.9/kubernetes/k8s-operator/)
  *     * [Security](https://docs.tigergraph.com/tigergraph-server/3.9/security/)
      * [Auditing Privileged User Actions](https://docs.tigergraph.com/tigergraph-server/3.9/security/audit-privileged-actions)
      * [Encrypting Connections](https://docs.tigergraph.com/tigergraph-server/3.9/security/encrypting-connections)
      * [Encrypting Data At Rest](https://docs.tigergraph.com/tigergraph-server/3.9/security/encrypting-data-at-rest)
      * [File Output Policy](https://docs.tigergraph.com/tigergraph-server/3.9/security/file-output-policy)
      * [Configuring Login Protection](https://docs.tigergraph.com/tigergraph-server/3.9/security/login-protection)
  *     * [REST API Reference](https://docs.tigergraph.com/tigergraph-server/3.9/API/)
      * [Authentication](https://docs.tigergraph.com/tigergraph-server/3.9/API/authentication)
      * [Built-in Endpoints](https://docs.tigergraph.com/tigergraph-server/3.9/API/built-in-endpoints)
      * [Built-in Endpoints JSON Catalog](https://docs.tigergraph.com/tigergraph-server/3.9/API/json-catalog)
      * [Upsert data to graph](https://docs.tigergraph.com/tigergraph-server/3.9/API/upsert-rest)
  *     * Additional Resources
      * Troubleshooting and FAQs
        * [Knowledge base and FAQs](https://kb.tigergraph.com/)
        * [System Administration FAQs](https://docs.tigergraph.com/tigergraph-server/3.9/troubleshooting/system-administration-faqs)
        * [Log Files](https://docs.tigergraph.com/tigergraph-server/3.9/troubleshooting/log-files)
          * [Gathering Log Information with gcollect](https://docs.tigergraph.com/tigergraph-server/3.9/troubleshooting/gcollect)
          * [Audit Logs](https://docs.tigergraph.com/tigergraph-server/3.9/troubleshooting/audit-logs)
          * [Set up Log Viewing with Elasticsearch, Kibana and Filebeat](https://docs.tigergraph.com/tigergraph-server/3.9/troubleshooting/elk-filebeat)
        * [Troubleshooting Guide](https://docs.tigergraph.com/tigergraph-server/3.9/troubleshooting/troubleshooting-guide)
      * References
        * [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/3.9/reference/configuration-parameters)
        * [Return codes](https://docs.tigergraph.com/tigergraph-server/3.9/reference/return-codes)
        * [List of Privileges](https://docs.tigergraph.com/tigergraph-server/3.9/reference/list-of-privileges)
        * [List of Ports](https://docs.tigergraph.com/tigergraph-server/3.9/reference/ports)
        * [Glossary](https://docs.tigergraph.com/tigergraph-server/3.9/reference/glossary)
        * [Patents and Third Party Software](https://docs.tigergraph.com/tigergraph-server/3.9/reference/patents-and-third-party-software)
        * [Legacy Version Documentation](https://docs.tigergraph.com/tigergraph-server/3.9/additional-resources/legacy-tg-versions)
        * [Comparing TigerGraph Editions](https://docs.tigergraph.com/tigergraph-server/3.9/intro/comparison-of-editions)
        * [Release and Patch Process](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process)


TigerGraph DB 3.9
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [TigerGraph DB 3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
  * Advanced Topics
  * Cluster and HA Management
  * [Cross-Region Replication (CRR)](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-index)
  * [CRR FAQ](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq)


[Edit this Page](https://github.com/tigergraph/server-docs/edit/3.9/modules/cluster-and-ha-management/pages/crr-faq.adoc)
### Contents
  * [How can I verify if data is replicated between primary and Disaster Recovery (DR) clusters?](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_how_can_i_verify_if_data_is_replicated_between_primary_and_disaster_recovery_dr_clusters)
  * [Why am I not seeing any loading job declared in the DR cluster?](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_why_am_i_not_seeing_any_loading_job_declared_in_the_dr_cluster)
  * [What happens after I run DROP ALL on primary?.](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_what_happens_after_i_run_drop_all_on_primary)
  * [Why is GSQL failing to replay a replica with an "UNAUTHORIZED" error?](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_why_is_gsql_failing_to_replay_a_replica_with_an_unauthorized_error)
  * [What happens if DR is down, unavailable or under scheduled maintenance (e.g. VM Motion)?](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_what_happens_if_dr_is_down_unavailable_or_under_scheduled_maintenance_e_g_vm_motion)
  * [Can I have multiple DRs?](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_can_i_have_multiple_drs)
  * [Is failover to DR automatic?](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_is_failover_to_dr_automatic)
  * [How will my application write to the new primary after DR failover?](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_how_will_my_application_write_to_the_new_primary_after_dr_failover)
  * [Is CRR replication synchronous or asynchronous?](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_is_crr_replication_synchronous_or_asynchronous)


# Cross-Region Replication FAQ
### Contents
  * [How can I verify if data is replicated between primary and Disaster Recovery (DR) clusters?](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_how_can_i_verify_if_data_is_replicated_between_primary_and_disaster_recovery_dr_clusters)
  * [Why am I not seeing any loading job declared in the DR cluster?](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_why_am_i_not_seeing_any_loading_job_declared_in_the_dr_cluster)
  * [What happens after I run DROP ALL on primary?.](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_what_happens_after_i_run_drop_all_on_primary)
  * [Why is GSQL failing to replay a replica with an "UNAUTHORIZED" error?](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_why_is_gsql_failing_to_replay_a_replica_with_an_unauthorized_error)
  * [What happens if DR is down, unavailable or under scheduled maintenance (e.g. VM Motion)?](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_what_happens_if_dr_is_down_unavailable_or_under_scheduled_maintenance_e_g_vm_motion)
  * [Can I have multiple DRs?](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_can_i_have_multiple_drs)
  * [Is failover to DR automatic?](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_is_failover_to_dr_automatic)
  * [How will my application write to the new primary after DR failover?](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_how_will_my_application_write_to_the_new_primary_after_dr_failover)
  * [Is CRR replication synchronous or asynchronous?](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_is_crr_replication_synchronous_or_asynchronous)


## [](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_how_can_i_verify_if_data_is_replicated_between_primary_and_disaster_recovery_dr_clusters)How can I verify if data is replicated between primary and Disaster Recovery (DR) clusters?
You can run `gstatusgraph` from the Linux terminal on both the primary and DR cluster. The count for vertices and edges should match if data is in sync. Note that if there are running loading jobs, the DR cluster might show a lower count. In this case, check again when the loading job is done.
## [](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_why_am_i_not_seeing_any_loading_job_declared_in_the_dr_cluster)Why am I not seeing any loading job declared in the DR cluster?
Loading jobs themselves are not replicated to the DR cluster. However, the data loaded by these loading jobs is replicated.
## [](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_what_happens_after_i_run_drop_all_on_primary)What happens after I run `DROP ALL` on primary?.
The `DROP ALL` command will stop cross-region replication (CRR). You will need to restore to re-establish the feature again. Here is a list of all commands and operations that will stop CRR:
  * `gsql drop all` which clears all data and schema
  * `gsql clear graph store` which clears only data
  * `gsql --reset` which clears all data, schemas and users, even resetting the password of the default tigergraph.
  * `gsql import graph`
  * `gsql export graph`
  * `gbar restore`


## [](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_why_is_gsql_failing_to_replay_a_replica_with_an_unauthorized_error)Why is GSQL failing to replay a replica with an "UNAUTHORIZED" error?
It’s most likely that primary and DR have different passwords for the same TigerGraph user.
This can happen when you enable CRR without restoring the GBAR backup in the DR cluster (since you did not have any data), but the DR was installed with a different password than the primary. Make sure the DR and primary clusters have the same TigerGraph password before enabling CRR.
## [](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_what_happens_if_dr_is_down_unavailable_or_under_scheduled_maintenance_e_g_vm_motion)What happens if DR is down, unavailable or under scheduled maintenance (e.g. VM Motion)?
Nothing will happen. As soon as DR is back online, Kafka MirrorMaker will replicate the Kafka Topic and GSQL will start replaying the replicas from where it left off. in order to DR automatically recover, it has to come back up within the Kafka Topic retention time limit. By default, this is set to 168 hours (7 days). You can tune this parameter based on your need by running `gadmin config set Kafka.RetentionHours <value_in_hours>`
## [](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_can_i_have_multiple_drs)Can I have multiple DRs?
Yes. You can set up multiple DR clusters to sync with one primary cluster. There is no hard limit to the number of DR clusters.
## [](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_is_failover_to_dr_automatic)Is failover to DR automatic?
No, failover to DR is a manual operation.
## [](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_how_will_my_application_write_to_the_new_primary_after_dr_failover)How will my application write to the new primary after DR failover?
We suggest that you handle this with an application load balancer where you can configure the DR IP hosts list (e.g. if you are using NGINX you can add the DR hosts list in the upstream section). When the Load Balancer fails the health check on the current primary it will re-route the traffic to the DR host list. You should then manually fail over to the DR cluster.
## [](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq#_is_crr_replication_synchronous_or_asynchronous)Is CRR replication synchronous or asynchronous?
CRR replication is asynchronous, based on Kafka MirrorMaker.
3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


